# opencv-starter-pack

./: .gitignore  README.md
cpp/open_webcam/: CMakeLists.txt  README.md  open_webcam.cpp
docker/: Dockerfile  README.md
python/: CHEATSHEET.md  README.md
python/basic/: calculate_FPS.py  close_image_on_keypress.py  getFPS.py  hstack.py  image_pyramid.py  insert_text.py  open_fullscreen.py  open_image.py  open_video.py  open_webcam.py  overlay.py  potrait.py  save_image.py  test.py  threshold_image.py  video_writer.py
python/deployment/streamlit/: README.md  app.py
python/examples/2d_to_3d_coordinates/: balltracking.py  calibration_data.npz  camera_calibration.py
python/examples/Edge_Detection/: Edge_Detection.md  edge_detector.py  live_edge_detector.py
python/examples/Video-Stitching/: Readme.MD  realtime_stitching.py
python/examples/circle-detection/: main.py
python/examples/corner-detection/: main.py
python/examples/deskew-document/: deskew.py
python/examples/face-detection/: face-eyes-detection.py
python/examples/image-matching/: sift.py
python/examples/image-processing/: image_process.py
python/examples/image_stitching/: README.md  stitching.py
python/examples/inpainting/: main.py
python/examples/mouse-event/: draw-circles.py
python/examples/multi-threading/: open_multiWebcam.py
python/examples/overlay_camera/: camera_overlay.py
python/examples/shape-detection/: ShapeDetection.ipynb  readMe.md
python/examples/straight-line-detection/: main.py
python/tools/: argument_parser.py  resize_image.py
(+19 files in other folders)
